force-app/main/default/objects/KT_DocumentTemplate__c/KT_DocumentTemplate__c.object-meta.xml
<CustomObject>
    <description>Template definition for B4 document generation. Stores configuration and points to the DOCX or PDF template binary in Salesforce Files.</description>
    <label>KT Document Template</label>
    <nameField>
        <displayFormat>DTPL-{000000}</displayFormat>
        <label>Document Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>