force-app/main/default/objects/KT_DocumentTemplate__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Comma-separated domain codes. Blank means the template applies to all domains.</description>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>