force-app/main/default/objects/KT_DocumentTemplate__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive templates are excluded from DIE selection and checklist generation.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>