force-app/main/default/objects/KT_DocumentTemplate__c/fields/Merge_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Merge_Field_Map__c</fullName>
    <description>JSON array mapping template placeholder tokens to Salesforce field API names.</description>
    <label>Merge Field Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>