force-app/main/default/objects/KT_DocumentTemplate__c/fields/Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Output_Format__c</fullName>
    <description>Generated document output format.</description>
    <label>Output Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>