force-app/main/default/objects/KT_DocumentTemplate__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>Comma-separated persona codes. Blank means the template applies to all personas.</description>
    <label>Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>