force-app/main/default/objects/KT_DocumentTemplate__c/fields/Regulatory_Framework__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Framework__c</fullName>
    <description>Regulatory frameworks satisfied or tagged by this document template.</description>
    <label>Regulatory Framework</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>OSHA</fullName>
            </value>
            <value>
                <fullName>SOX</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>FDA</fullName>
            </value>
            <value>
                <fullName>ISO 9001</fullName>
            </value>
            <value>
                <fullName>ISO 45001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>