force-app/main/default/objects/KT_DocumentTemplate__c/fields/Requires_Signature__c.field-meta.xml
<CustomField>
    <fullName>Requires_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the e-signature workflow starts after document generation.</description>
    <label>Requires Signature</label>
    <type>Checkbox</type>
</CustomField>