force-app/main/default/objects/KT_DocumentTemplate__c/fields/Signature_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Signature_Expiry_Days__c</fullName>
    <description>Number of days after dispatch before an unsigned document triggers escalation.</description>
    <label>Signature Expiry Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>