force-app/main/default/objects/KT_DocumentTemplate__c/fields/Signer_Roles__c.field-meta.xml
<CustomField>
    <fullName>Signer_Roles__c</fullName>
    <description>JSON array defining signer roles, signing order, and role type such as Onboardee, Manager, Legal, or HR.</description>
    <label>Signer Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>