force-app/main/default/objects/KT_DocumentTemplate__c/fields/Template_Binary__c.field-meta.xml
<CustomField>
    <fullName>Template_Binary__c</fullName>
    <description>ContentDocument Id for the DOCX or PDF template file stored in Salesforce Files.</description>
    <label>Template Binary</label>
    <length>18</length>
    <type>Text</type>
</CustomField>