force-app/main/default/objects/KT_DocumentTemplate__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Human-readable template name, for example UK Employment Contract - Healthcare New Employee.</description>
    <label>Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>