force-app/main/default/objects/KT_DocumentTemplate__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Template version number. Previous versions are retained for audit purposes.</description>
    <label>Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>